New Route Params & Child Routes Example.

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <html>
-  <head>
-    <title>Angular App</title>
-  </head>
-  <body>
+<head>
+  <base href="/"/>
+  <title>Route Params And Child Routes Example</title>
+</head>
+<body>
   <my-app>loading</my-app>
-  </body>
+</body>
 </html>
